--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "tsc-watch --onSuccess \"npm start\""
   },
   "devDependencies": {
+    "@types/apicache": "^1.6.2",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.4.3",
@@ -19,6 +20,7 @@
   "dependencies": {
     "@apollo/server": "^4.8.1",
     "@prisma/client": "5.0.0",
+    "apicache": "^1.6.3",
     "express": "^4.18.2",
     "graphql": "^16.7.1",
     "jsonwebtoken": "^9.0.2"
